系统整体布局结构

--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -3,6 +3,9 @@
         width: 180px;
         position: fixed;
         height: 100%;
+        .nav-container {
+            height: 100%;
+        }
 
         .ant-menu {
             height: 100%;
