--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -3,6 +3,7 @@
         width: 180px;
         position: fixed;
         height: 100%;
+
         .nav-container {
             height: 100%;
         }
@@ -18,7 +19,8 @@
         margin-left: 180px;
         transition: all 0.3s;
         border: 1px solid #eee;
-        padding: 0 0 0 10px ;
+        padding: 0 0 0 10px;
+
         &.menu-unfold {
             margin-left: 80px;
         }
@@ -35,9 +37,8 @@
         .user-info {
             margin-right: 40px;
             float: right;
-            text-align: center;
-            padding: 0 60px;
-
+            text-align: center;            
+            width: 200px;
             .info,
             .button {
                 cursor: pointer;
@@ -48,11 +49,14 @@
                     color: #f00;
                 }
             }
+
             li {
                 padding: 0 30px;
             }
+
             li:not(:first-child) {
                 display: none;
+
                 &:hover {
                     background: #eee;
                     color: cornflowerblue;
